# mcp-proxy-for-aws

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGE_SPEC_DEFERRED_AUTH.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  NOTICE  README.md  config.example.yaml  pyproject.toml  renovate.json  requirements.txt  uv-requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  questions.yml
.github/actions/build-and-push-container-image/: action.yml
.github/actions/build-and-push-container-image-test/: action.yml
.github/workflows/: bandit.yml  dependabot-auto-merge.yml  ecr-publish-on-release.yml  pip-audit.yml  pypi-and-ecr-publish-on-release.yml  pypi-publish-on-release.yml  python-integ.yml  python.yml  renovate.yml  scheduled-integ-tests.yml  stale.yml  test-ecr-publish.yml  test-pypi-publish.yml
aws_mcp_proxy/: __init__.py  logging_config.py  mcp_proxy_manager.py  server.py  sigv4_helper.py  utils.py
aws_mcp_proxy/middleware/: tool_filter.py
examples/mcp-client/agent-framework/: .env.example  README.md  main.py  pyproject.toml
examples/mcp-client/langchain/: .env.example  README.md  main.py  pyproject.toml
examples/mcp-client/llamaindex/: README.md  main.py  pyproject.toml
examples/mcp-client/strands/: .env.example  README.md  main.py  pyproject.toml
mcp_proxy_for_aws/: __init__.py  cli.py  client.py  config.py  context.py  fastmcp_patch.py  hooks.py  proxy.py  server.py  sigv4_helper.py  transport_patch.py  utils.py
mcp_proxy_for_aws/middleware/: client_info.py  debug_logging.py  empty_tools_retry.py  initialize_middleware.py  profile_switcher.py  tool_error_middleware.py  tool_filter.py  tool_timeout_middleware.py
scripts/: build-with-sbom.sh  generate-sbom.sh
src/aws_mcp_proxy/: __init__.py  logging_config.py  mcp_proxy_manager.py  server.py  sigv4_helper.py  utils.py
tests/: conftest.py  test_init.py  test_logging_config.py  test_main.py  test_mcp_proxy_manager.py  test_server.py  test_sigv4_helper.py  test_utils.py
tests/integ/: README.md  conftest.py  manual_test.py  test_aws_mcp_server.py  test_aws_mcp_server_happy_path.py  test_aws_mcp_server_negative.py  test_bedrock_agentcore_runtime.py  test_hello_world.py  test_proxy_dynamic_tools.py  test_proxy_simple_mcp_server.py
tests/integ/mcp/: simple_mcp_client.py
tests/integ/mcp/simple_mcp_server/: mcp_server.py  requirements.txt
tests/unit/: test_cli.py  test_client.py  test_client_info_middleware.py  test_config.py  test_credential_process_stdin_inheritance.py  test_empty_tools_retry.py  test_fastmcp_initialize_error_handling.py  test_fastmcp_patch.py  test_hooks.py  test_initialize_client.py  test_initialize_middleware.py  test_main.py  test_mcp_proxy_manager.py  test_profile_switcher.py  test_proxy.py  test_server.py  test_sigv4_helper.py  test_sigv4_metadata_injection.py  test_tool_error_middleware.py  test_tool_filter.py  test_tool_timeout_middleware.py  test_transport_patch.py  test_utils.py
tests/unit/examples/: README.md  __init__.py  example_validator.py  test_mcp_client_examples.py
