[project]
name = "aws-mcp-proxy"
version = "0.0.0"

description = "AWS MCP Proxy Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE" ]
authors = [
    {name = "Amazon Web Services"},
    {name = "AWS MCP Proxy", email="203918161+aws-mcp@users.noreply.github.com"},# TODO
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

