[tool.uv]
prerelease = "allow"

[tool.uv.workspace]
members = [
    "examples/mcp-client/*"
]

[project]
name = "mcp-proxy-for-aws"

# NOTE: "Patch"=9223372036854775807 bumps next release to zero.
version = "1.6.0"

description = "MCP Proxy for AWS"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastmcp>=3.2,<3.5",
    "boto3>=1.41.0",
    "botocore[crt]>=1.41.0",
]

license = {text = "Apache-2.0"}
license-files = ["LICENSE", "NOTICE" ]
authors = [
    {name = "Amazon Web Services"},
    {name = "MCP Proxy for AWS"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
slim = [
    "fastmcp>=3.2,<3.5",
    "boto3>=1.41.0",
    "botocore[crt]>=1.41.0",
]
full = [
    "aiofile==3.9.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "authlib==1.6.12",
    "awscrt==0.32.2",
    "backports-tarfile==1.2.0; python_full_version < '3.12'",
    "beartype==0.22.9",
    "boto3==1.43.24",
    "botocore==1.43.24",
    "cachetools==6.2.3",
    "caio==0.9.25",
    "certifi==2025.11.12",
    "cffi==2.0.0; platform_python_implementation != 'PyPy'",
    "click==8.3.1",
    "colorama==0.4.6; sys_platform == 'win32'",
    "cryptography==46.0.7",
    "cyclopts==5.0.0a1",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fastmcp==3.4.2",
    "fastmcp-slim==3.4.2",
    "griffelib==2.0.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.15",
    "importlib-metadata==8.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.3.0",
    "jeepney==0.9.0; sys_platform == 'linux'",
    "jmespath==1.0.1",
    "joserfc==1.7.0",
    "jsonref==1.1.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.4.0b1",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "markdown-it-py==4.0.0",
    "mcp==1.24.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.39.1",
    "packaging==26.1",
    "pathable==0.5.0b2",
    "platformdirs==4.5.1",
    "py-key-value-aio==0.4.4",
    "pycparser==2.23; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.20.0",
    "pyjwt==2.10.1",
    "pyperclip==1.11.0",
    "pyrsistent==0.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "pywin32==311; sys_platform == 'win32'",
    "pywin32-ctypes==0.2.3; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "s3transfer==0.18.0",
    "secretstorage==3.5.0; sys_platform == 'linux'",
    "six==1.17.0",
    "sse-starlette==3.0.4",
    "starlette==1.2.1",
    "tomli==2.3.0; python_full_version < '3.11'",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uncalled-for==0.2.0",
    "urllib3==2.7.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "zipp==3.23.0",
]

[project.urls]
documentation = "https://github.com/aws/aws-mcp-proxy/blob/main/README.md"
repository = "https://github.com/aws/mcp-proxy-for-aws.git"
changelog = "https://github.com/aws/aws-mcp-proxy/blob/main/CHANGELOG.md"

[project.scripts]
"mcp-proxy-for-aws" = "mcp_proxy_for_aws.server:main"

[dependency-groups]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "commitizen>=4.2.2",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "pyright>=1.1.398",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "G", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pyright]
include = ["mcp_proxy_for_aws", "tests", "examples/*"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules", "**/dist", "**/build"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "mcp_proxy_for_aws/__init__.py:__version__"
]
update_changelog_on_bump = true

[tool.hatch.build.targets.wheel]
packages = ["mcp_proxy_for_aws"]

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = [ "tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that make live API calls (deselect with '-m \"not live\"')",
    "asyncio: marks tests that use asyncio",
    "unit: mark the tests as unit test to run for every PR",
    "integ: mark the tests as integration test to run before release",
]

[tool.coverage.report]
exclude_also = [
    'pragma: no cover',
    'if __name__ == .__main__.:\n    main()',
]

[tool.coverage.run]
source = ["mcp_proxy_for_aws"]
